FIX Correct oversized images on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -767,7 +767,7 @@ body.short h2 {
     }
 
     .blog-image {
-        max-height: inherit;
+        max-height: 130px;
     }
 
 
